--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Cart">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,6 +19,7 @@
             android:text="@string/cart"
             android:textSize="25dp"
             android:textStyle="bold" />
+
         <TextView
             android:id="@+id/emptyCartTextView"
             android:layout_width="match_parent"
@@ -26,25 +28,43 @@
             android:text="Cart is empty"
             android:visibility="gone"
             android:padding="16dp"
-            android:textSize="20dp"/>
+            android:textSize="20dp" />
+
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewCart"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="8dp"/>
+                android:padding="8dp" />
+
         </androidx.core.widget.NestedScrollView>
+
         <TextView
             android:id="@+id/totalAmountTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Total Amount: $0"
+            android:text="Total Amount: ₹0"
             android:padding="16dp"
-            android:textSize="20dp"/>
-    </LinearLayout>
-</FrameLayout>
+            android:textSize="20dp" />
 
+        <Button
+            android:id="@+id/processPaymentButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:padding="12dp"
+            android:text="Process Payment"
+            android:textSize="18sp"
+            android:background="@drawable/button_background"
+            android:textColor="#ffffff" />
+
+
+    </LinearLayout>
+
+</FrameLayout>
