--- a/app/src/main/res/layout/fragment_appointment_booking.xml
+++ b/app/src/main/res/layout/fragment_appointment_booking.xml
@@ -28,5 +28,6 @@
         android:id="@+id/bookButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="#458AAC"
         android:text="Book Appointment"/>
 </LinearLayout>
