--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -61,7 +61,7 @@
             android:padding="12dp"
             android:text="Process Payment"
             android:textSize="18sp"
-            android:background="@drawable/button_background"
+            android:backgroundTint="#458AAC"
             android:textColor="#ffffff" />
 
 
